# USBProbe

./: .gitignore  TODO.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
docs/superpowers/plans/: 2026-04-09-usbprobe-v1.md
docs/superpowers/specs/: 2026-04-09-usbprobe-design.md
native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
native/src/: descriptor.rs  device.rs  lib.rs  monitor.rs  usb_ids.rs
src/locales/en/: common.json  descriptors.json  devices.json
src/locales/zh-CN/: common.json  descriptors.json  devices.json
src/main/: database.ts  export-service.ts  index.ts  ipc.ts  map-device.ts  udev-rules.ts  usb-ids.ts  usb-worker.ts  worker-manager.ts
src/preload/: index.ts
src/renderer/: App.tsx  i18n.ts  index.html
src/renderer/components/: DescriptorsTab.tsx  DetailPanel.tsx  DeviceTreePanel.tsx  EventLogPanel.tsx  EventStrip.tsx  HexViewerTab.tsx  LanguageSwitcher.tsx  MainLayout.tsx  OverviewTab.tsx  PermissionDialog.tsx  SearchFilter.tsx  SettingsPanel.tsx  TitleBar.tsx  TreeNode.tsx  UdevRulesManager.tsx
src/renderer/hooks/: use-usb-api.ts
src/renderer/stores/: device-store.ts
src/renderer/styles/: theme.css
src/shared/: types.ts
tests/renderer/: device-store.test.ts  hex-viewer.test.tsx
