[package]
name = "usbprobe-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
udev = "0.9"
nix = { version = "0.29", features = ["fs", "poll"] }
thiserror = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
